[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/2d/stair room.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/Clickable.gd" type="Script" id=2]
[ext_resource path="res://scenes/Upstairs.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Dialogue_Font.tres" type="DynamicFont" id=4]

[node name="Scene" type="Node2D"]
script = ExtResource( 3 )

[node name="Upstairs_Background" type="Sprite" parent="."]
position = Vector2( 540.886, 360.992 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Objects" type="Node2D" parent="."]

[node name="Office" type="Button" parent="Objects"]
margin_left = 523.0
margin_top = 227.0
margin_right = 786.0
margin_bottom = 545.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Boarded Wall" type="Button" parent="Objects"]
margin_left = 412.223
margin_top = 478.293
margin_right = 490.223
margin_bottom = 578.293
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Objects"]
margin_left = 5.0
margin_top = 548.0
margin_right = 1081.0
margin_bottom = 669.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hallway" type="Button" parent="Objects"]
margin_left = 865.0
margin_top = -1.0
margin_right = 1091.0
margin_bottom = 572.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Label" parent="."]
margin_right = 435.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Objects/Office" to="." method="_on_Office_pressed"]
[connection signal="pressed" from="Objects/Boarded Wall" to="." method="_on_Boarded_Wall_pressed"]
[connection signal="pressed" from="Objects/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Objects/Hallway" to="." method="_on_Hallway_pressed"]
